--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "type": "module",
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
@@ -17,8 +20,10 @@
     "@tailwindcss/vite": "^4.0.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.479.0",
     "react": "^18.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.0.0",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.3.0",
