--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "fontawesome": "^5.6.3",
     "lucide-react": "^0.479.0",
     "react": "^18.0.0",
     "react-day-picker": "^8.10.1",
