--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "fontawesome": "^5.6.3",
+    "framer-motion": "^12.5.0",
     "lucide-react": "^0.479.0",
     "react": "^18.0.0",
     "react-day-picker": "^8.10.1",
